--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RESUME</title>
-  <link rel="ICON" href="https://th.bing.com/th/id/OIP.Tve1O8ra9QkEguz9Gd3hdQHaHa?cb=iwc2&rs=1&pid=ImgDetMain">
+  <link rel="ICON" href="RESUME_ICON.jpeg">
   <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -95,17 +95,17 @@
 
       <li>
         <a href="https://www.linkedin.com/in/dhanush-bheemisetty-931ba0305?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
-          <img src="https://img.icons8.com/?size=96&id=13930&format=png" alt="LinkedIn" width="30" height="30">
+          <img src="linkdin-icon.png" alt="LinkedIn" width="30" height="30">
         </a>
       </li>
       <li>
         <a href="https://www.youtube.com/" target="_blank">
-          <img src="https://img.icons8.com/?size=96&id=19318&format=png" alt="YouTube" width="30" height="30">
+          <img src="youtube-icon.png" alt="YouTube" width="30" height="30">
         </a>
       </li>
       <li>
         <a href="https://www.instagram.com/" target="_blank">
-          <img src="https://img.icons8.com/?size=96&id=32323&format=png" alt="Instagram" width="30" height="30">
+          <img src="instagram-icon.png" alt="Instagram" width="30" height="30">
         </a>
       </li>
     </ul>
