--- a/assign.html
+++ b/assign.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title style="font-style: italic;">PORTFOLIO</title>
-  <link rel="ICON" href="https://ik.imagekit.io/8mjomdngw/AB2.jpg?updatedAt=1747635187659">
+  <link rel="ICON" href="AB2.jpg">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
       
       <div class="nav-buttons-assign">
           <a href="resume.html" class="resume-btn">View Resume</a>
-          <a href="file:///C:/Users/dhanu/AppData/Local/Microsoft/Windows/INetCache/IE/6710EEDI/Dhanush_Bheemisetty[1].pdf" class="resume-btn">Download Resume</a>
+          <a href="RESUME_DHANUSH.pdf" class="resume-btn">Download Resume</a>
       </div>
   </main>
   
